# algo-project

./: .gitignore  CMakeLists.txt  README.md  Research_Paper.tex  vercel.json
benchmark/: run_benchmark.cpp  run_game_trace.cpp
include/: Board.h  BruteForceSolver.h  Cache.h  DPSolver.h  GameState.h  ISolver.h  Metrics.h
results/: data.csv  game_trace.csv
src/: Board.cpp  BruteForceSolver.cpp  Cache.cpp  DPSolver.cpp  GameState.cpp
visualization/: Board.js  Charts.js  Index.html  Solver.js
